# mathaskell

./: Matrix.hs  Matrix2.hs  Matrix3.hs  mathaskell.cabal
